--- a/.gitignore
+++ b/.gitignore
@@ -113,7 +113,6 @@ ipython_config.py
 #   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
 #   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
 #pdm.lock
-#pdm.toml
 .pdm-python
 .pdm-build/
 
@@ -205,3 +204,107 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Diagnostic reports (Node.js)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directories and reports
+coverage/
+*.lcov
+.nyc_output
+
+# Cache directories for various tools
+.nyc_output/
+.eslintcache
+.stylelintcache
+.cython_debug/
+
+# Dependency directories
+node_modules/
+jspm_packages/
+bower_components/
+web_modules/
+
+# Build and output directories
+build/Release
+
+# Package manager files and caches
+.npm
+.yarn-integrity
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
+.pnp.*
+
+# Framework and bundler directories
+.next/
+out/
+.nuxt/
+.parcel-cache/
+
+# Framework / Static site generators
+.vuepress/dist/
+.temp/
+.svelte-kit/
+**/.vitepress/dist/
+**/.vitepress/cache/
+.docusaurus/
+.serverless/
+.fusebox/
+.dynamodb/
+.firebase/
+
+# Editor and IDE files
+.vscode-test/
+.idea/
+
+# Environment variables and virtual environments
+.env.*
+!.env.example
+.pixi/
+
+# Python bytecode and caches
+*.py[cod]
+
+# Jupyter and IPython
+.ipynb_checkpoints/
+
+# Test reports and outputs
+
+# Django specific
+
+# Flask specific
+
+# Scrapy
+
+# Sphinx docs
+
+# PyBuilder
+
+# Misc
+.tern-port
+
+# Misc caches and files for other tools
+
+# System files
+
+# JetBrains (commented to ignore entire folder if needed)
+# .idea/
+
+# Others
